# chaise

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Justfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yml  pytest.yml  python-publish.yml
docs/: Justfile  conf.py  index.rst
docs/api/: attrs.rst  core.rst  dictful.rst  helpers.rst  index.rst  structs.rst
docs/prose/: index.rst  migrations.rst  pooling.rst  types.rst
docs/prose/integrations/: attrs.rst  basic.rst  dictful.rst  index.rst  pydantic.rst
src/chaise/: __init__.py  attrs.py  dictful.py  helpers.py  structs.py
src/chaise/cli/: __init__.py  __main__.py  client.py  datafiles.py
tests/: conftest.py  test_attrs.py  test_helpers.py
tests/cli/: conftest.py  test_apply.py
tests/dictful/: conftest.py  test_basic.py  test_dictful.py  test_docs.py  test_meta.py
