[tool.poetry]
name = "chaise"
version = "0.1.0"
description = "An async Python client for CouchDB"
authors = ["Jamie Bliss <jamie@ivyleav.es>"]
license = "Artistic-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = {extras = ["http2"], version = "^0.27.0"}
anyio = "^4.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
anyio = {extras = ["trio"], version = "^4.4.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
